# Ray

./: Box.cpp  Box.h  CMakeLists.txt  Factory.h  FactoryBox.h  FactorySphere.h  FactoryTetra.h  Figure.cpp  Figure.h  Point.h  RGB.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Tetra.cpp  Tetra.h  box.txt  functions.cpp  functions.h  in.txt  inputData.txt  inputDatabox.txt  main.cpp
